// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeGenerator with discriminators > Cat.type defined as const 1`] = `
"export type Cat = {
    id: string;
    type: \\"Cat\\";
    meow?: boolean;
};
"
`;

exports[`TypeGenerator with discriminators > Dog.type defined as const 1`] = `
"export type Dog = {
    id: string;
    bark?: number;
    type: \\"Dog\\";
};
"
`;

exports[`TypeGenerator with discriminators > MixedValueTypeConst ignores type constraint in favor of const constraint 1`] = `
"export type MixedValueTypeConst = {
    foobar?: \\"foobar\\";
};
"
`;

exports[`TypeGenerator with discriminators > NullConst correctly produces "null" 1`] = `
"export type NullConst = {
    withoutValue?: null;
};
"
`;

exports[`TypeGenerator with discriminators > NumberValueConst const correctly produces \`42\` 1`] = `
"export type NumberValueConst = {
    foobar?: 42;
};
"
`;

exports[`TypeGenerator with discriminators > PetStore defined as array with type union 1`] = `
"export type Petstore = {
    id: number;
    pets?: (Cat | Dog)[];
};
"
`;

exports[`TypeGenerator with discriminators > StringValueConst const correctly produces "foobar" 1`] = `
"export type StringValueConst = {
    foobar?: \\"foobar\\";
};
"
`;
